# flac

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile.am  azure-pipelines.yml  config.h.cmake
.github/workflows/: action.yml
cmake/: FindOgg.cmake
src/: CMakeLists.txt
src/flac/: CMakeLists.txt
src/flac-rust/: CMakeLists.txt  Cargo.toml
src/flac-rust/src/: bitreader.rs  callback.rs  crc.rs  format.rs  lib.rs  ordinals.rs
src/libFLAC/: CMakeLists.txt
src/libFLAC++/: CMakeLists.txt
src/metaflac/: CMakeLists.txt
src/share/getopt/: CMakeLists.txt
